--- a/sample.env
+++ b/sample.env
@@ -13,3 +13,8 @@ OPENSEARCH_PORT=9200
 FETCH_HISTORY=true
 USE_POSTGRESQL=true
 USE_OPENSEARCH=false
+USE_INFLUXDB=true
+INFLUXDB_URL = "http://ip:8086/"
+INFLUXDB_TOKEN = "api_key=="
+INFLUXDB_ORG = "your_org"
+INFLUXDB_BUCKET = "Discord_bot"
